# euler-copilot-shell

./: .gitignore  .goreleaser.yaml  .ruff.toml  AGENTS.md  MANIFEST.in  README.en.md  README.md  README_EN.md  euler-copilot-shell  euler-copilot-shell.spec  go.mod  go.sum  pyproject.toml  requirements.txt  ruff.toml  setup.py  witty-assistant.spec
.agents/: config.template.yaml
.agents/rules/: bash-template.md  cross-platform.md  git.md  go-coding.md  security.md  testing.md
.github/: copilot-instructions.md
api/opencode/: README.md  oapi-codegen.yaml
cmd/witty/: main.go
dev/setup/: macos-orbstack.sh  windows-wsl.sh
distribution/: build_rpm.sh  create_tarball.py  euler-copilot-shell.spec  eulercopilot-cli.spec  eulercopilot.spec
distribution/linux/: euler-copilot-shell.spec
docs/: README.md  使用手册.md  智能体使用手册.md  部署手册.md
docs/design/: server-lifecycle.md  shell-adapter.md  witty-overview.md
docs/development/: development-todo.md  implementation-plan.md  message-display-design.md  rpm-packaging-design.md  sse-client.md  streaming-renderer.md
internal/app/: app.go  app_test.go  provider.go  provider_test.go  wiring.go
internal/cli/: ask.go  ask_test.go  doctor.go  hidden_shell_control.go  hidden_shell_control_test.go  init.go  provider.go  provider_test.go  root.go  root_test.go  server.go  server_test.go  session.go  version.go
internal/config/: config.go  (+3 more)
packaging/: config.toml  euler-copilot-shell.spec  witty-epol-update.repo  witty.bash-completion
scripts/: build.sh  update-openapi.sh
src/: __version__.py  big_model.py  cmd_generate.py  command_processor.py  copilot.py  euler_copilot.spec  eulercopilot.py  eulercopilot.sh  eulercopilot_shortcut.sh  interact.py  main.py  setup.py  tui.py
tests/: README.md  conftest.py
(+207 files in other folders)
